# TriggerCursor

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  run.bat  run.py  run.sh
src/: controller_daemon.h  http_server.h  linux_impl.cpp  main.cpp  math_utils.h  windows_impl.cpp
triggercursor/: __init__.py  gui.py
